# game.shader.presets

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
game.resource.shader.presets/: addon.xml  addon.xml.in
game.shader.presets/: addon.xml.in
game.shader.presets/resources/: ShaderPresetsDefault.xml  ShaderPresetsGLSLP.xml
game.shader.presets/resources/language/resource.language.en_gb/: strings.po
src/: addon.cpp  addon.h
src/depends/: file_path_special.c
src/depends/gfx/: video_shader_parse.c  video_shader_parse.h  video_state_tracker.c
src/depends/libretro-common/file/: config_file.c
src/depends/libretro-common/hash/: rhash.c
src/depends/libretro-common/include/file/: config_file.h
src/depends/libretro-common/streams/: file_stream.c
src/depends/libretro-common/string/: stdstring.c
src/filesystem/: DirectoryCache.cpp  DirectoryCache.h  DirectoryUtils.cpp  DirectoryUtils.h  FileUtils.cpp  FileUtils.h  Filesystem.cpp  Filesystem.h  FilesystemTypes.h  IDirectoryUtils.h  IFile.h  IFileUtils.h
src/filesystem/generic/: ReadableFile.cpp  ReadableFile.h  SeekableFile.cpp  SeekableFile.h
src/filesystem/vfs/: VFSDirectoryUtils.cpp  VFSDirectoryUtils.h  VFSFileUtils.cpp  VFSFileUtils.h
src/log/: ILog.h  Log.cpp  Log.h  LogAddon.cpp  LogAddon.h  LogConsole.cpp  LogConsole.h  LogSyslog.cpp  LogSyslog.h
src/utils/: CommonIncludes.h  CommonMacros.h  RarchTranslator.cpp  RarchTranslator.h  StringUtils.cpp  StringUtils.h  URIUtils.cpp  URIUtils.h
src/utils/windows/: CharsetConverter.cpp
